# ouroboros

./: .gitignore  <generate_tests.py>  README.md  autonomous_loop.py  eval_coverage.py  generate_tests.py  pyproject.toml  recursive_self_prompter.py  results.tsv  test.py  test_eval.py
conductor/: council-swarm.md
demo_pi/: experiment.py  pi_approximator.py  pi_calculator.py
docs/: HOW_IT_WORKS.md
docs/plans/: 2026-03-22-tree-visualization.md
examples/: setup_demo.sh
integrations/: demo_pxos.py  pxos_bridge.py  pxos_goals.py
scripts/: cron_self_prompt.sh  setup_cron.sh
src/ouroboros/: __init__.py  cli.py  evolutionary.py  tui.py
src/ouroboros/core/: __init__.py  api_server.py  automated_loop.py  code_applier.py  council.py  goal.py  loop.py  portal.py  prompt_generator.py  safety.py  self_prompt_loop.py  tree.py
src/ouroboros/protocols/: __init__.py  alignment.py  cognitive.py  insights.py  memory.py  meta_prompt.py  observability.py  reward.py  sandbox.py  self_modification.py  watchdog.py
src/ouroboros/tests/: test_glue.py (Create new)
src/ouroboros/v2/: SKILL.md  extension.ts  (+5 more)
tests/: test_alignment.py  test_harness.py  test_insights.py  test_meta_prompter.py  test_ouroboros.py  test_researcher.py  test_reward.py  test_sandbox.py  test_self_modification.py  test_tree.py  test_watchdog.py
tests/core/: test_api_server.py  test_automated_loop.py  test_council.py  test_goal.py  test_loop.py  test_response_analyzer.py  test_unified_prompt_engine.py
tests/protocols/: test_cognitive.py  test_memory.py  test_meta_prompt.py  test_observability.py
